feat: Integrate interactive historical map system with timeline and event details. Added components for map visualization, event selection, and timeline navigation. Included Tailwind CSS for styling and Leaflet for map rendering. Updated package dependencies and documentation for new features.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "astro": "^5.8.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.7",
+    "@types/leaflet": "^1.9.18",
+    "tailwindcss": "^4.1.7"
   }
 }
