--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "@types/leaflet": "^1.9.18",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.27.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "prettier": "3.5.3",
+    "prettier-plugin-astro": "0.14.1",
     "tailwindcss": "^4.1.7"
   }
 }
