--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/vite": "^4.1.7",
     "@types/leaflet": "^1.9.18",
+    "@types/node": "^22.15.30",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^9.27.0",
