--- a/mki-ui/package.json
+++ b/mki-ui/package.json
@@ -16,6 +16,7 @@
     "astro": "^5.8.0",
     "leaflet": "^1.9.4",
     "mermaid": "^11.4.0",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -24,6 +25,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "@types/leaflet": "^1.9.18",
     "@types/node": "^22.15.30",
+    "@types/papaparse": "^5.5.1",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^9.27.0",
