feat: Implement SSR for dynamic Hadith and Quran pages
This commit transitions the Astro project from static site generation (SSG) to server-side rendering (SSR) to support dynamic content.

The primary motivation for this change is to enable the creation of individual, shareable, and SEO-friendly pages for each Hadith and Quran verse. Generating these pages statically is not practical due to the large volume of data.

Key changes include:
- Updated `astro.config.mjs` to enable server output and add the Cloudflare adapter.
- Created new dynamic routes: `/en/hadith/[source]/[hadithNo]` and `/en/quran/[chapter]/[verse]`.
- These new pages fetch data on-demand from the API at request time.
- Added the `@astrojs/sitemap` integration to ensure new dynamic pages are discoverable.
- Added a JSON-LD schema slot to the main layout for improved SEO on these pages.

--- a/mki-ui/package.json
+++ b/mki-ui/package.json
@@ -9,7 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.12",
     "@astrojs/react": "^4.3.0",
+    "@astrojs/sitemap": "^3.6.0",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "astro": "^5.8.0",
