--- a/mki-etl/pyproject.toml
+++ b/mki-etl/pyproject.toml
@@ -4,4 +4,13 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["pandas>=2.3.3", "youtube-transcript-api>=0.6.0", "google-genai>=1.0.0", "pydantic>=2.0.0", "python-dotenv>=1.0.0"]
+dependencies = [
+    "pandas>=2.3.3",
+    "youtube-transcript-api>=0.6.0",
+    "google-genai>=1.0.0",
+    "pydantic>=2.0.0",
+    "python-dotenv>=1.0.0",
+    "requests>=2.32.5",
+    "beautifulsoup4>=4.14.3",
+    "lxml>=6.0.2",
+]
