--- a/mki-agents/pyproject.toml
+++ b/mki-agents/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "google-genai>=1.0.0",
+    "pandas>=2.0.0",
+    "python-dotenv>=1.0.0",
+]
