--- a/mki-web/package.json
+++ b/mki-web/package.json
@@ -24,11 +24,13 @@
   "devDependencies": {
     "@playwright/test": "^1.52.0",
     "@tailwindcss/vite": "^4.1.7",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/leaflet": "^1.9.18",
     "@types/node": "^22.15.30",
     "@types/papaparse": "^5.5.1",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.32.1",
+    "better-sqlite3": "^12.5.0",
     "eslint": "^9.27.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
