--- a/mki-web/wrangler.toml
+++ b/mki-web/wrangler.toml
@@ -3,6 +3,17 @@ name = "mki"
 pages_build_output_dir = "dist"
 compatibility_date = "2025-12-10"
 
+# Local development D1 binding (uses same ID as production for local data)
+[[d1_databases]]
+binding = "DB"
+database_name = "DB"
+database_id = "3a11c23e-2d1e-4738-8f35-4fc1ce143b1e"
+
+# Local development KV binding
+[[kv_namespaces]]
+binding = "SESSION"
+id = "local-session"
+
 [env.production]
 compatibility_date = "2024-12-01"
 
