--- a/mki-web/wrangler.toml
+++ b/mki-web/wrangler.toml
@@ -2,6 +2,7 @@
 name = "mki"
 pages_build_output_dir = "dist"
 compatibility_date = "2025-12-10"
+compatibility_flags = ["nodejs_compat"]
 
 # Local development D1 binding (uses same ID as production for local data)
 [[d1_databases]]
@@ -16,6 +17,7 @@ id = "local-session"
 
 [env.production]
 compatibility_date = "2024-12-01"
+compatibility_flags = ["nodejs_compat"]
 
 [env.production.vars]
 SITE_URL = "https://mustknowislam.com"
